#500 - Add attribute validationRegex support for consistent document attribute values